--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imagekit/next": "^2.1.0",
     "@upstash/redis": "^1.34.8",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "formik": "^2.4.6",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
