feat: add shadcn and integrate with it

--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@imagekit/next": "^2.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@upstash/redis": "^1.34.8",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.515.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -21,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -33,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
