--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tinymce/tinymce-react": "^6.2.1",
     "@upstash/redis": "^1.34.8",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
