--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@floating-ui/react": "^0.27.16",
     "@imagekit/next": "^2.1.0",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
@@ -36,6 +37,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
@@ -60,7 +62,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^20.19.19",
+    "@types/node": "20.19.21",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -69,6 +71,6 @@
     "sass": "^1.93.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
